IDEA-94809 Rerun leaves old java system process running